--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,39 +1,19 @@
 ---
 import Layout from '../layouts/Layout.astro';
 import Card from '../components/Card.astro';
-import VueSample from '../components/VueSample.vue';
+import '../styles/global.css';
 ---
 
-<Layout title="Welcome to Astro.">
+<Layout title="Blog No Name">
 	<main>
-		<h1>Welcome to <span class="text-gradient">Astro</span></h1>
-		<p class="instructions">
-			To get started, open the directory <code>src/pages</code> in your project.<br />
-			<strong>Code Challenge:</strong> Tweak the "Welcome to Astro" message above.
-		</p>
+		<h1>Blog <span class="text-gradient">No Name</span></h1>
 		<ul role="list" class="link-card-grid">
 			<Card
-				href="https://docs.astro.build/"
-				title="Documentation"
-				body="Learn how Astro works and explore the official API docs."
-			/>
-			<Card
-				href="https://astro.build/integrations/"
-				title="Integrations"
-				body="Supercharge your project with new frameworks and libraries."
-			/>
-			<Card
-				href="https://astro.build/themes/"
-				title="Themes"
-				body="Explore a galaxy of community-built starter themes."
-			/>
-			<Card
-				href="https://astro.build/chat/"
-				title="Community"
-				body="Come say hi to our amazing Discord community. ❤️"
+				href="/posts/20230103_new_year"
+				title="2023 New Year"
+				body="2023 年の目標とか"
 			/>
 		</ul>
-		<VueSample />
 	</main>
 </Layout>
 
