add return to top link

--- a/src/layouts/MarkdownPostLayout.astro
+++ b/src/layouts/MarkdownPostLayout.astro
@@ -5,3 +5,10 @@ import '../styles/global.css';
 <h1>{frontmatter.title}</h1>
 <p>Post Date: {frontmatter.pubDate}</p>
 <slot />
+<footer><a href="/">ブログ一覧に戻る</a></footer>
+
+<style>
+  footer {
+    margin-top: 50px;
+  }
+</style>
