--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -16,6 +16,7 @@ const { title } = Astro.props;
     <title>{title}</title>
   </head>
   <body>
+    <header><a href="/">Home</a><a href="/about">About</a></header>
     <slot />
   </body>
 </html>
@@ -31,5 +32,13 @@ const { title } = Astro.props;
   code {
     font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono, Bitstream Vera Sans Mono, Courier New,
       monospace;
+  }
+
+  header {
+    padding: 10px 20px;
+    display: flex;
+    gap: 10px;
+    align-items: center;
+    border-bottom: solid 2px;
   }
 </style>
