--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -15,7 +15,14 @@ body {
   box-sizing: border-box;
 }
 
+main {
+  margin: auto;
+  padding: 1.5rem;
+  max-width: 60ch;
+}
+
 h1 {
-  margin: 1rem 0;
-  font-size: 2.5rem;
+  font-size: 3rem;
+  font-weight: 800;
+  margin: 0;
 }
