--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -3,9 +3,14 @@ import Layout from '../layouts/Layout.astro';
 import '../styles/global.css';
 ---
 
+<script>
+  import '../components/aboutme.js';
+</script>
+
 <Layout title="About me">
   <main>
     <h1>About me</h1>
+    <about-me></about-me>
   </main>
 </Layout>
 
