--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -2,10 +2,11 @@
 export interface Props {
   title: string;
   body: string;
+  pubDate: string;
   href: string;
 }
 
-const { href, title, body } = Astro.props;
+const { href, title, body, pubDate } = Astro.props;
 ---
 
 <li class="link-card">
@@ -14,8 +15,11 @@ const { href, title, body } = Astro.props;
       {title}
       <span>&rarr;</span>
     </h2>
-    <p>
+    <p class="post-body">
       {body}
+    </p>
+    <p class="pub-date">
+      {pubDate}
     </p>
   </a>
 </li>
@@ -31,6 +35,7 @@ const { href, title, body } = Astro.props;
     background-position: 100%;
     transition: background-position 0.6s cubic-bezier(0.22, 1, 0.36, 1);
     box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -2px rgba(0, 0, 0, 0.1);
+    position: relative;
   }
 
   .link-card > a {
@@ -52,6 +57,15 @@ const { href, title, body } = Astro.props;
     margin-top: 0.5rem;
     margin-bottom: 0;
     color: #444;
+  }
+  .post-body {
+    font-size: 1.1rem;
+    margin-bottom: 1rem;
+  }
+  .pub-date {
+    position: absolute;
+    right: 15px;
+    bottom: 10px;
   }
   .link-card:is(:hover, :focus-within) {
     background-position: 0;
