--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,6 +4,11 @@ import Card from '../components/Card.astro';
 import '../styles/global.css';
 
 const allPosts = await Astro.glob('../pages/posts/*.md');
+
+const arrangePreview = (rawContent: string): string => {
+  const headSentence = rawContent.substring(0, 50);
+  return headSentence.replace(/.$/, '...');
+};
 ---
 
 <Layout title="Blog No Name">
@@ -11,9 +16,16 @@ const allPosts = await Astro.glob('../pages/posts/*.md');
     <h1>Blog <span class="text-gradient">No Name</span></h1>
     <ul role="list" class="link-card-grid">
       {
-        allPosts.map((post) => (
-          <Card href={post.url || ''} title={post.frontmatter.title} body={post.frontmatter.description} />
-        ))
+        allPosts
+          .reverse()
+          .map((post) => (
+            <Card
+              href={post.url || ''}
+              title={post.frontmatter.title}
+              body={arrangePreview(post.rawContent())}
+              pubDate={post.frontmatter.pubDate}
+            />
+          ))
       }
     </ul>
   </main>
@@ -48,8 +60,8 @@ const allPosts = await Astro.glob('../pages/posts/*.md');
   }
   .link-card-grid {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(24ch, 1fr));
-    gap: 1rem;
+    grid-template-columns: repeat(auto-fit, minmax(335px, 1fr));
+    gap: 1.5rem;
     padding: 0;
   }
 </style>
