refactor layout components

--- a/src/layouts/HomeLayout.astro
+++ b/src/layouts/HomeLayout.astro
@@ -22,25 +22,9 @@ const { title } = Astro.props;
     <slot />
   </body>
 </html>
-<style is:global>
+<style>
   :root {
     --accent: 124, 58, 237;
     --accent-gradient: linear-gradient(45deg, rgb(var(--accent)), #da62c4 30%, white 60%);
-  }
-  html {
-    font-family: system-ui, sans-serif;
-    background-color: #f6f6f6;
-  }
-  code {
-    font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono, Bitstream Vera Sans Mono, Courier New,
-      monospace;
-  }
-
-  header {
-    padding: 10px 20px;
-    display: flex;
-    gap: 10px;
-    align-items: center;
-    border-bottom: solid 2px;
   }
 </style>
