--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,5 +1,5 @@
 ---
-import Layout from '../layouts/Layout.astro';
+import HomeLayout from '../layouts/HomeLayout.astro';
 import '../styles/global.css';
 ---
 
@@ -7,11 +7,11 @@ import '../styles/global.css';
   import '../components/aboutme.js';
 </script>
 
-<Layout title="About me">
+<HomeLayout title="About me">
   <main>
     <h1>About me</h1>
     <about-me></about-me>
   </main>
-</Layout>
+</HomeLayout>
 
 <style></style>
