--- a/src/layouts/MarkdownPostLayout.astro
+++ b/src/layouts/MarkdownPostLayout.astro
@@ -1,18 +1,29 @@
 ---
-const { frontmatter } = Astro.props;
-
-import Layout from '../layouts/Layout.astro';
+import Header from '../components/Header.astro';
 import '../styles/global.css';
+
+const { frontmatter } = Astro.props;
 ---
 
-<Layout title={frontmatter.title}>
-  <main>
-    <h1>{frontmatter.title}</h1>
-    <p>Post Date: {frontmatter.pubDate}</p>
-    <slot />
-    <footer><a href="/">ブログ一覧に戻る</a></footer>
-  </main>
-</Layout>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width" />
+    <link rel="icon" type="image/svg+xml" href="/img/favicon.svg" />
+    <meta name="generator" content={Astro.generator} />
+    <title>{frontmatter.title}</title>
+  </head>
+  <body>
+    <Header />
+    <main>
+      <h1>{frontmatter.title}</h1>
+      <p>Post Date: {frontmatter.pubDate}</p>
+      <slot />
+      <footer><a href="/">ブログ一覧に戻る</a></footer>
+    </main>
+  </body>
+</html>
 
 <style>
   h1 {
