--- a/src/layouts/HomeLayout.astro
+++ b/src/layouts/HomeLayout.astro
@@ -15,6 +15,11 @@ const { title } = Astro.props;
     <meta name="viewport" content="width=device-width" />
     <link rel="icon" type="image/svg+xml" href="/img/favicon.svg" />
     <meta name="generator" content={Astro.generator} />
+    <meta property="og:title" content="Blog No Name" />
+    <meta property="og:type" content="blog" />
+    <meta property="og:url" content="https://blog-no-name.netlify.app" />
+    <meta property="og:image" content="https://blog-no-name.netlify.app/img/blog-no-name.png" />
+    <meta property="og:description" content="Blog site created by t0yohei" />
     <title>{title}</title>
   </head>
   <body>
