add twitter ogp info to index layout

--- a/src/layouts/HomeLayout.astro
+++ b/src/layouts/HomeLayout.astro
@@ -20,6 +20,9 @@ const { title } = Astro.props;
     <meta property="og:type" content="blog" />
     <meta property="og:url" content="https://blog-no-name.netlify.app" />
     <meta property="og:image" content="https://blog-no-name.netlify.app/img/blog-no-name.png" />
+    <meta property="og:description" content="Blog No Name is t0yohei's personal blog site" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:site" content="@t0yohei" />
     <title>{title}</title>
   </head>
   <body>
