--- a/src/layouts/MarkdownPostLayout.astro
+++ b/src/layouts/MarkdownPostLayout.astro
@@ -1,8 +1,12 @@
 ---
 import Header from '../components/Header.astro';
 import '../styles/global.css';
+import type { CollectionEntry } from 'astro:content';
 
-const { frontmatter, rawContent } = Astro.props;
+type Props = {
+  entry: CollectionEntry<'blog'>;
+};
+const { entry } = Astro.props;
 
 const arrangePreview = (rawContent: string): string => {
   const headSentence = rawContent.substring(0, 50);
@@ -18,20 +22,20 @@ const arrangePreview = (rawContent: string): string => {
     <link rel="icon" type="image/svg+xml" href="/img/favicon.svg" />
     <meta name="generator" content={Astro.generator} />
     <meta property="og:site_name" content="Blog No Name" />
-    <meta property="og:title" content={frontmatter.title} />
+    <meta property="og:title" content={entry.data.title} />
     <meta property="og:type" content="article" />
-    <meta property="og:url" content={`https://blog-no-name.netlify.app${frontmatter.url}`} />
+    <meta property="og:url" content={`https://blog-no-name.netlify.app/posts/${entry.slug}`} />
     <meta property="og:image" content="https://blog-no-name.netlify.app/img/blog-no-name.png" />
-    <meta property="og:description" content={arrangePreview(rawContent())} />
+    <meta property="og:description" content={arrangePreview(entry.body)} />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@t0yohei" />
-    <title>{frontmatter.title}</title>
+    <title>{entry.data.title}</title>
   </head>
   <body>
     <Header />
     <main>
-      <h1>{frontmatter.title}</h1>
-      <p>Post Date: {frontmatter.pubDate}</p>
+      <h1>{entry.data.title}</h1>
+      <p>Post Date: {entry.data.pubDate}</p>
       <slot />
       <footer><a href="/">ブログ一覧に戻る</a></footer>
     </main>
