--- a/src/pages/posts/[slug].astro
+++ b/src/pages/posts/[slug].astro
@@ -1,5 +1,7 @@
 ---
+import MarkdownPostLayout from '../../layouts/MarkdownPostLayout.astro';
 import { getEntryBySlug } from 'astro:content';
+
 // 1. Get the slug from the incoming server request
 const { slug } = Astro.params;
 if (slug === undefined) return;
@@ -12,4 +14,6 @@ if (entry === undefined) return;
 const { Content } = await entry.render();
 ---
 
-<Content />
+<MarkdownPostLayout entry={entry}>
+  <Content />
+</MarkdownPostLayout>
