--- a/src/layouts/HomeLayout.astro
+++ b/src/layouts/HomeLayout.astro
@@ -15,6 +15,7 @@ const { title } = Astro.props;
     <meta name="viewport" content="width=device-width" />
     <link rel="icon" type="image/svg+xml" href="/img/favicon.svg" />
     <meta name="generator" content={Astro.generator} />
+    <meta name="description" content="Blog No Name is t0yohei's personal blog site" />
     <meta property="og:site_name" content="Blog No Name" />
     <meta property="og:title" content="Blog No Name Home" />
     <meta property="og:type" content="blog" />
