altered dns name

--- a/src/layouts/MarkdownPostLayout.astro
+++ b/src/layouts/MarkdownPostLayout.astro
@@ -23,8 +23,8 @@ const preview = headSentence.replace(/.$/, '...');
     <meta property="og:site_name" content="Blog No Name" />
     <meta property="og:title" content={entry.data.title} />
     <meta property="og:type" content="article" />
-    <meta property="og:url" content={`https://blog-no-name.netlify.app/posts/${entry.slug}`} />
-    <meta property="og:image" content="https://blog-no-name.netlify.app/img/blog-no-name.png" />
+    <meta property="og:url" content={`https://blog-no-name.com/posts/${entry.slug}`} />
+    <meta property="og:image" content="https://blog-no-name.com/img/blog-no-name.png" />
     <meta property="og:description" content={preview} />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@t0yohei" />
