--- a/src/layouts/HomeLayout.astro
+++ b/src/layouts/HomeLayout.astro
@@ -19,8 +19,8 @@ const { title } = Astro.props;
     <meta property="og:site_name" content="Blog No Name" />
     <meta property="og:title" content="Blog No Name Home" />
     <meta property="og:type" content="blog" />
-    <meta property="og:url" content="https://blog-no-name.netlify.app" />
-    <meta property="og:image" content="https://blog-no-name.netlify.app/img/blog-no-name.png" />
+    <meta property="og:url" content="https://blog-no-name.com" />
+    <meta property="og:image" content="https://blog-no-name.com/img/blog-no-name.png" />
     <meta property="og:description" content="Blog No Name is t0yohei's personal blog site" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@t0yohei" />
