--- a/src/layouts/MarkdownPostLayout.astro
+++ b/src/layouts/MarkdownPostLayout.astro
@@ -1,6 +1,7 @@
 ---
 import Header from '../components/Header.astro';
 import '../styles/global.css';
+import { ViewTransitions } from 'astro:transitions';
 import type { CollectionEntry } from 'astro:content';
 
 type Props = {
@@ -12,7 +13,7 @@ const headSentence = entry.body.substring(0, 50);
 const preview = headSentence.replace(/.$/, '...');
 ---
 
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -29,6 +30,7 @@ const preview = headSentence.replace(/.$/, '...');
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@t0yohei" />
     <title>{entry.data.title}</title>
+    <ViewTransitions />
   </head>
   <body>
     <Header />
@@ -38,15 +40,14 @@ const preview = headSentence.replace(/.$/, '...');
       <slot />
       <footer><a href="/">ブログ一覧に戻る</a></footer>
     </main>
+    <style>
+      h1 {
+        font-size: 32px;
+      }
+
+      footer {
+        margin-top: 50px;
+      }
+    </style>
   </body>
 </html>
-
-<style>
-  h1 {
-    font-size: 32px;
-  }
-
-  footer {
-    margin-top: 50px;
-  }
-</style>
