--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,22 +1,6 @@
 html {
   background-color: #f1f5f9;
-  font-family: sans-serif;
-}
-
-body {
-  font-size: 14px;
-  margin: 0 auto;
-  width: 100%;
-  max-width: 80ch;
-  padding: 1rem;
-  line-height: 1.5;
-  overflow-wrap: break-word;
-}
-
-main {
-  margin: auto;
-  padding: 0.5rem;
-  max-width: 60ch;
+  font-family: -apple-system,BlinkMacSystemFont,"Hiragino Kaku Gothic ProN","Hiragino Sans",Meiryo,sans-serif,"Segoe UI Emoji";
 }
 
 img {
@@ -25,38 +9,6 @@ img {
   margin: auto;
   display: block;
   padding: 2rem 0;
-}
-
-@media screen and (min-width:480px) {
-  body {
-    max-width: 100ch;
-  }
-
-  main {
-    max-width: 80ch;
-  }
-}
-@media screen and (min-width:768px) and ( max-width:1024px) {
-    /*　画面サイズが768pxから1024pxまではここを読み込む　*/
-  body {
-    font-size: 16px;
-    max-width: 120ch;
-  }
-
-  main {
-    max-width: 100ch;
-  }
-}
-
-@media screen and (min-width:1024px) {
-  body {
-    font-size: 16px;
-    max-width: 140ch;
-  }
-
-  main {
-    max-width: 120ch;
-  }
 }
 
 * {
@@ -79,4 +31,58 @@ p code {
   padding: 2px 4px;;
   font-size: .9em;
   border-radius: 6px;
+}
+
+
+/*　画面サイズが 479 px 以下はここを読み込む(SP 想定)　*/
+body {
+  margin: 0 auto;
+  width: 100%;
+  padding: 1rem;
+  line-height: 1.5;
+  overflow-wrap: break-word;
+
+  font-size: 16px;
+  max-width: 80ch;
+}
+
+main {
+  margin: auto;
+  padding: 0.5rem;
+  line-height: 1.8;
+  color: #000000d1;
+
+  max-width: 60ch;
+}
+
+/*　画面サイズが 480 px 〜 767 px はここを読み込む(mini Tablet 想定)　*/
+@media screen and (min-width:480px) {
+  body {
+    max-width: 100ch;
+  }
+
+  main {
+    max-width: 80ch;
+  }
+}
+/*　画面サイズが 768 px 〜 1024 pxまではここを読み込む(Tablet 想定)　*/
+@media screen and (min-width:768px) {
+  body {
+    max-width: 120ch;
+  }
+
+  main {
+    max-width: 100ch;
+  }
+}
+
+/*　画面サイズが 1025 px からはここを読み込む　*/
+@media screen and (min-width:1024px) {
+  body {
+    max-width: 140ch;
+  }
+
+  main {
+    max-width: 120ch;
+  }
 }
