--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,4 +1,8 @@
-<header><a href="/">Home</a><a href="/about">About</a></header>
+<header>
+  <a href="/">Home</a>
+  <a href="/about">About</a>
+  <a href="/app">App</a>
+</header>
 <style>
   header {
     padding: 10px 20px;
