--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -7,8 +7,9 @@
   header {
     padding: 10px 20px;
     display: flex;
-    gap: 10px;
+    gap: 16px;
     align-items: center;
     border-bottom: solid 2px;
+    font-size: 1.3em;
   }
 </style>
