Updating existing collections to the new Content Layer API

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -24,7 +24,7 @@ const arrangePreview = (rawContent: string): string => {
       {
         sortedPosts.map((post) => (
           <Card
-            href={`posts/${post.slug}` || ''}
+            href={`posts/${post.id}` || ''}
             title={post.data.title}
             body={arrangePreview(post.body)}
             pubDate={post.data.pubDate}
