--- a/src/layouts/MarkdownPostLayout.astro
+++ b/src/layouts/MarkdownPostLayout.astro
@@ -1,7 +1,7 @@
 ---
 import Header from '../components/Header.astro';
 import '../styles/global.css';
-import { ViewTransitions, slide } from 'astro:transitions';
+import { ClientRouter, slide } from 'astro:transitions';
 import type { CollectionEntry } from 'astro:content';
 
 type Props = {
@@ -30,7 +30,7 @@ const preview = headSentence.replace(/.$/, '...');
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@t0yohei" />
     <title>{entry.data.title}</title>
-    <ViewTransitions />
+    <ClientRouter />
   </head>
   <body>
     <Header />
