--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -2,6 +2,7 @@
   <a href="/">Home</a>
   <a href="/about">About</a>
   <a href="/app">App</a>
+  <a href="https://github.com/t0yohei/Curriculum-Vitae" target="_blank" rel="noopener noopener">Jobs</a>
 </header>
 <style>
   header {
