--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,8 +1,8 @@
 <header>
-  <a href="/">Home</a>
+  <a href="/">Blog</a>
   <a href="/about">About</a>
   <a href="/app">App</a>
-  <a href="https://github.com/t0yohei/Curriculum-Vitae" target="_blank" rel="noopener noopener">Jobs</a>
+  <a href="https://github.com/t0yohei/Curriculum-Vitae" target="_blank" rel="noopener noopener">Job</a>
 </header>
 <style>
   header {
