improve: rename post to blog

--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -15,7 +15,7 @@ const { href, title, body, pubDate } = Astro.props;
       {title}
       <span>&rarr;</span>
     </h2>
-    <p class="post-body">
+    <p class="blog-body">
       {body}
     </p>
     <p class="pub-date">
@@ -58,7 +58,7 @@ const { href, title, body, pubDate } = Astro.props;
     margin-bottom: 0;
     color: #444;
   }
-  .post-body {
+  .blog-body {
     font-size: 1.1rem;
     margin-bottom: 1rem;
   }
