--- a/src/pages/blogs/[id].astro
+++ b/src/pages/blogs/[id].astro
@@ -1,5 +1,5 @@
 ---
-import MarkdownPostLayout from '../../layouts/MarkdownPostLayout.astro';
+import MarkdownBlogLayout from '../../layouts/MarkdownBlogLayout.astro';
 import { getEntry, render } from 'astro:content';
 
 // 1. Get the id from the incoming server request
@@ -7,13 +7,13 @@ const { id } = Astro.params;
 if (id === undefined) return;
 
 // 2. Query for the entry directly using the request id
-const entry = await getEntry('blog', id);
+const entry = await getEntry('blogs', id);
 if (entry === undefined) return;
 
 // 3. render the entry to HTML in the template
 const { Content } = await render(entry);
 ---
 
-<MarkdownPostLayout entry={entry}>
+<MarkdownBlogLayout entry={entry}>
   <Content />
-</MarkdownPostLayout>
+</MarkdownBlogLayout>
