--- a/src/layouts/MarkdownBlogLayout.astro
+++ b/src/layouts/MarkdownBlogLayout.astro
@@ -36,7 +36,7 @@ const preview = headSentence?.replace(/.$/, '...') || '';
     <Header />
     <main transition:animate={slide({ duration: '0.5s' })}>
       <h1>{entry.data.title}</h1>
-      <p>投稿日: {entry.data.pubDate}</p>
+      <p>投稿日: {entry.data.pubdate}</p>
       <slot />
       <footer><a href="/">ブログ一覧に戻る</a></footer>
     </main>
