--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -1,25 +1,35 @@
 ---
+import { type Post } from '../model';
+
 export interface Props {
-  title: string;
-  body: string;
-  pubdate: string;
-  href: string;
+  post: Post;
 }
 
-const { href, title, body, pubdate } = Astro.props;
+const { post } = Astro.props;
+
+const createPreview = (): string => {
+  const content = post.collection === 'blogs' ? post.body ?? '' : post.data.summary ?? '';
+
+  if (!content) return '';
+  return content.substring(0, 50).replace(/.$/, '...');
+};
+
+const getPostHref = (): string => {
+  return post.collection === 'blogs' ? `blogs/${post.id}` : post.data.link ?? '';
+};
 ---
 
 <li class="link-card">
-  <a href={href}>
+  <a href={getPostHref()}>
     <h2>
-      {title}
+      {post.data.title ?? ''}
       <span>&rarr;</span>
     </h2>
     <p class="blog-body">
-      {body}
+      {createPreview()}
     </p>
     <p class="pub-date">
-      {pubdate}
+      {post.data.pubdate?.toISOString().slice(0, 10) ?? ''}
     </p>
   </a>
 </li>
