--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -22,11 +22,13 @@ const getPostHref = (): string => {
 
 <li class="link-card">
   <a href={getPostHref()}>
-    <h2>
-      {post.collection === 'slides' ? <Icon class="icon" name="speakerdeck" /> : <Icon class="icon" name="mdi:file-document" />}
-      <span>{post.data.title ?? ''}</span>
+    <span class="icon-container">
+      {post.collection === 'slides' ? <Icon class="icon" name="speakerdeck"/> : <Icon size={20} class="icon" name="mdi:file-document" />}
+    </span>
+    <h2>{post.data.title ?? ''}</h2>
+    <span class="link-icon-container">
       {post.collection === 'slides' ?  <Icon class="icon" name="mdi:external-link" /> :<Icon class="icon" name="mdi:arrow-right" />}
-    </h2>
+    </span>
     <p class="blog-body">
       {createPreview()}
     </p>
@@ -53,7 +55,6 @@ const getPostHref = (): string => {
     width: 100%;
     text-decoration: none;
     line-height: 1.4;
-    padding: 1rem;
     border-radius: 0.35rem;
     color: #111;
     background-color: white;
@@ -63,14 +64,7 @@ const getPostHref = (): string => {
     margin: 0;
     font-size: 1.25rem;
     transition: color 0.6s cubic-bezier(0.22, 1, 0.36, 1);
-    display: grid;
-    grid-template-columns: 20px 1fr 20px;
-    align-items: start;
-    gap: 0.5rem;
-  }
-
-  .icon {
-    margin-top: 0.25rem;
+    padding: 0.5rem 2.5rem;
   }
 
   p {
@@ -80,17 +74,34 @@ const getPostHref = (): string => {
 
   .blog-body {
     font-size: 1.1rem;
-    padding: 1.0rem;
+    padding: 0.5rem 1rem 2rem;
+  }
+
+  .icon-container {
+    position: absolute;
+    left: 12px;
+    top: 12px;
+  }
+
+  .link-icon-container {
+    position: absolute;
+    right: 12px;
+    top: 12px;
   }
 
   .pub-date {
     position: absolute;
-    right: 15px;
-    bottom: 10px;
+    right: 12px;
+    bottom: 12px;
   }
 
   .link-card:is(:hover, :focus-within) {
     background-position: 0;
+  }
+
+  .icon {
+    width: 20px;
+    height: 20px;
   }
 
   .link-card:is(:hover, :focus-within) h2 {
