--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -11,7 +11,7 @@ export interface Props {
 const { post } = Astro.props;
 
 const createPreview = (): string => {
-  const content = post.body || post.data.description || '';
+  const content = post.body || post.data.body || post.data.description || '';
 
   if (!content) return '';
   return content.substring(0, 50).replace(/.$/, '...');
